2010-04-28  Vadim Kurland  <vadim@vk.crocodile.org>

	* instDialog.cpp (instDialog::show): fixes #1429 "Finish" button
	is activated during compile. Also added unit test for this.

2010-04-27  vadim  <vadim@vk.crocodile.org>

	* CompilerDriver_ipt.cpp (CompilerDriver_ipt::dumpScript): fixes #1425
	"iptables script generated for the empty rule set is broken". Compiler
	generated empty shell function for empty Policy rule set. It should
	always include at least automatic rules.

	* SSHSession.cpp (SSHSession::terminate): see #1426, #1428 use
	QProcess::waitForFinished() instead of just sleep() after we send
	TERM signal to the background process. Also let Qt process events
	to update the GUI while waiting.

	* instDialog_installer.cpp (instDialog::stopInstall): fixed #1428
	button "Stop" in the installer dialog does not stop installer
	process

	* SSHSession.cpp (terminate): fixes #1426 "segfault when cancel
	while installing" (SF bug 2990333). No need to process events in
	terminate(); instead, using QProcess::waitForFinished() to give
	QProcess object opportunity to call this signal if user hit Cancel
	at just right time when background process has finished but
	QProcess has not noticed this yet. This situation caused crash
	reported in the SF bug. This problem appears to be specific to
	some versions of Qt. It does not happen with Qt 4.5.0 or Qt 4.6.2
	but happens with 4.5.3.

	* instDialog_ui_ops.cpp (addToLog): working on #1426 "segfault
	when cancel while installing". SF bug 2990333. Processing of large
	chunks of compile or installer output took long time, especially
	scanning for errors and warnings which involves RegEx
	match. Splitting the buffer onto individual QString lines and
	matching each line against all error and warning pattern regexes
	made it much faster. Also do not call qApp->processEvents() from
	addtoLog() to avoid recursive call.

	* PolicyCompiler_ipt.cpp (PolicyCompiler_ipt::checkForShadowingPlatformSpecific):