@@ -1,3 +1,12 @@
+2010-04-29  Vadim Kurland  <vadim@vk.crocodile.org>
+
+	* SSHSession.cpp (SSHSession::terminate): see #1426, #1428
+	QProcess sends signal "finished()" during event processing on
+	windows, added checks for that.
+
+	* instDialog.cpp (instDialog::mainLoopInstall): disabling and
+	enabling "stop" button in the compile/install dialog appropriately
+
 2010-04-28  Vadim Kurland  <vadim@vk.crocodile.org>
 
 	* instDialog.cpp (instDialog::show): fixes #1429 "Finish" button
